# reviews-reproduced

./: .gitignore  CLAUDE.md  README.md
doi_10.1016_S0165-2125(99)00023-2/: README.md  pyproject.toml  run_reproduction.py
doi_10.1016_S0165-2125(99)00023-2/reference_outputs/: dispersion_so16.npz  dispersion_so2.npz  dispersion_so4.npz  dispersion_so8.npz
doi_10.1016_S0165-2125(99)00023-2/tests/: test_reproduction.py
doi_10.1016_j.cageo.2024.105850/: README.md  paper_tables.py  pyproject.toml  run_reproduction.py
doi_10.1016_j.cageo.2024.105850/tests/: test_paper_tables.py
doi_10.1016_j.cageo.2024.105850/upstream/: CITATION.cff  README.md
doi_10.1016_j.jappgeo.2015.08.007/: README.md  liu_2014_ls.py  paper_tables.py  pyproject.toml  run_reproduction.py  yang2015_dispersion.py  yang2015_rsfd_solvers.py  yang_yan_liu_2015_sa.py
doi_10.1016_j.jappgeo.2015.08.007/reference_outputs/: yang2015_dispersion_curves_m10_u1p10.json  yang2015_table_1_te.json  yang2015_table_2_sa_u1p10.json  yang2015_table_3_ls_u1p10.json  yang2015_table_4_dispersion_u.json
doi_10.1016_j.jappgeo.2015.08.007/tests/: test_liu_2014_ls.py  test_paper_tables.py  test_pdf_provenance.py  test_yang2015_dispersion.py  test_yang2015_rsfd_solvers.py  test_yang_yan_liu_2015_sa.py
doi_10.1016_j.jappgeo.2015.08.007/transcription_review/: graduation_review_r1_codex_disagree.txt  graduation_review_r2_after_g1_fix.txt  side_by_side.py  yang2015_eq1_pde.tex  yang2015_eq3_C_matrix.tex  yang2015_eq4_R_bond.tex
doi_10.1016_j.jcp.2003.09.024/: README.md  analytical_reference.py  esim_apply.py  esim_projector.py  esim_recursion.py  lax_wendroff.py  paper_tables.py  pyproject.toml  run_reproduction.py  run_reproduction_interface.py
doi_10.1016_j.jcp.2003.09.024/reference_outputs/: .gitkeep  convergence_homog.json  convergence_interface.json
doi_10.1016_j.jcp.2003.09.024/tests/: test_convergence_lw_homog.py  test_esim_projector.py  test_paper_tables.py  test_projector_vs_analytical.py  test_rt_interface_continuity.py  test_rt_oblique.py
doi_10.1016_j.jcp.2003.09.024/transcription_review/: lp04_R_plan_review.txt  lp04_R_postport_review.txt  lp04_R_postport_review_r1.txt  lp04_appendixA_transcription.tex  lp04_close_out_codex.txt  lp04_close_out_dual_review_prompt.md  lp04_eq10_11_transcription.tex  lp04_eq10_11_transcription.txt  lp04_eq20_24_transcription.tex  lp04_eq26_31_transcription.tex  lp04_eq32_37_transcription.tex  lp04_eq38_42_transcription.tex  lp04_eq43_44_transcription.tex  tier3_esim_design_prompt.md  tier3_esim_dual_review.txt  tier_beta_corr_dual_review_output.txt  tier_beta_corr_dual_review_prompt.md
doi_10.1016_j.jcp.2015.07.023/: README.md  pyproject.toml
doi_10.1016_j.jcp.2015.07.023/petersson_sjogreen_2015/: __init__.py  paper_tables.py  sbp_sat.py
doi_10.1016_j.jcp.2015.07.023/tests/: test_paper_tables.py
doi_10.1016_j.jcp.2023.112684/: README.md  paper_tables.py  pyproject.toml  run_dispersion_analysis.py
doi_10.1016_j.jcp.2023.112684/reference_outputs/: dispersion_l1_errors.json  sto_coefficients_pinned.json
doi_10.1016_j.jcp.2023.112684/tests/: test_dispersion_l1_regression.py  test_paper_tables.py
doi_10.1029_JB095iB06p08513/: README.md  pyproject.toml
doi_10.1029_JB095iB06p08513/mallick_frazer_1990/: __init__.py  anisotropic_rt.py  paper_tables.py
doi_10.1029_JB095iB06p08513/tests/: test_paper_tables.py
doi_10.1093_gji_ggu032/: README.md  pyproject.toml
doi_10.1093_gji_ggu032/liu_2014/: __init__.py  optimal_fd_coefficients.py  paper_tables.py
doi_10.1093_gji_ggu032/tests/: test_paper_tables.py
doi_10.1093_gji_ggw456/: README.md  pyproject.toml
doi_10.1093_gji_ggw456/diag/: d1_cij_profile.py  d2_side_by_side.py
doi_10.1093_gji_ggw456/kristek_2017/: __init__.py  paper_tables.py
doi_10.1093_gji_ggw456/tests/: test_paper_tables.py
doi_10.1111_1365-2478.12210/: README.md  pyproject.toml  run_reproduction.py
doi_10.1111_1365-2478.12210/reference_outputs/: di_bartolo_2015_anchors.npz
doi_10.1111_1365-2478.12210/tests/: test_reproduction.py
doi_10.1111_1365-2478.13230/: README.md  pyproject.toml
doi_10.1111_1365-2478.13230/hao_2022/: __init__.py  kjartansson.py  paper_tables.py
doi_10.1111_1365-2478.13230/tests/: test_paper_tables.py
doi_10.1190_1.1442147/: README.md  pyproject.toml  run_reproduction.py
doi_10.1190_1.1442147/reference_outputs/: wavefield_so2.npz
doi_10.1190_1.1442147/tests/: test_reproduction.py
doi_10.1190_1.1442422/: README.md  pyproject.toml  run_reproduction.py
doi_10.1190_1.1442422/reference_outputs/: wavefield_so4.npz
doi_10.1190_1.1442422/tests/: test_reproduction.py
doi_10.1190_1.1442874/: README.md  pyproject.toml
doi_10.1190_1.1442874/pratt_1990/: __init__.py  analytical_acoustic_2d.py  paper_tables.py
doi_10.1190_1.1442874/tests/: test_paper_tables.py
doi_10.1190_1.1443849/: README.md  pyproject.toml  run_reproduction.py
doi_10.1190_1.1443849/reference_outputs/: dispersion_so16.npz  dispersion_so2.npz  dispersion_so4.npz  dispersion_so8.npz
doi_10.1190_1.1443849/tests/: test_reproduction.py
doi_10.1190_1.1707078/: README.md  pyproject.toml  run_reproduction.py
doi_10.1190_1.1707078/reference_outputs/: corner_average_battery.npz
doi_10.1190_1.1707078/tests/: test_reproduction.py
doi_10.1190_geo2013-0299.1/: README.md  paper_tables.py  pyproject.toml  run_reproduction.py
doi_10.1190_geo2013-0299.1/reference_outputs/: convergence_results.json
doi_10.1190_geo2013-0299.1/tests/: test_paper_tables.py
doi_10.1190_geo2022-0195.1/: README.md  pyproject.toml
doi_10.1190_geo2022-0195.1/bader_2023/: __init__.py  acoustic_elastic_coupling.py  bader_canonical_runners.py
doi_10.1190_image2025-4313380.1/: Makefile  README.md  paper_tables.py  pyproject.toml  review_findings.qmd  run_reproduction.py  stage0_operator_analysis.py  stage1_acoustic_dual_pair.py  stage2_elastic_isotropic.py  stage3_filtering_and_source.py  stage4_tti_elastic.py
doi_10.1785_0120010167/: README.md  pyproject.toml
doi_10.1785_0120010167/moczo_2002/: __init__.py  (+2 more)
doi_10.1785_BSSA0710040959/: README.md  pyproject.toml
(+15 files in other folders)
