[project]
name = "yang-yan-liu-2015"
version = "0.1.0"
description = "Reproduction of Yang, Yan & Liu (2015) — Optimal rotated staggered-grid finite-difference schemes for elastic wave modeling in TTI media (DOI 10.1016/j.jappgeo.2015.08.007)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "sympy>=1.13",
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
