[project]
name = "reproduction-lombard-piraux-2004"
version = "0.1.0"
description = "Reproduction of Lombard & Piraux (2004, J. Comp. Phys. 195(1):90-116, DOI 10.1016/j.jcp.2003.09.024) — Explicit Simplified Interface Method (ESIM) for 2D acoustic/elastic interfaces. Basis for the path-(e) Tier 3 ESIM implementation in Method 2 RSG."
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10"

# Source acquisition (per the arXiv-first / side-by-side
# transcription protocol — feedback_transcription_workflow_arxiv_then_side_by_side.md):
#   - arXiv: not available (paper went direct to JCP, no preprint)
#   - HAL: hal-00004813 — author-deposited PDF only, no LaTeX source
#   - Reproduction therefore relies on PDF-only transcription with
#     user-confirmed side-by-side review PDFs for each table/equation
#
# Canonical paper-faithfulness anchors (all byte-checkable against
# the paper's published constants + algorithmic recipes):
#
#   1. Fluid-solid jump conditions (Eq 10-11): the matrices
#      C₁⁰ (2×3, fluid), C₂⁰ (2×5, solid), L₁⁰ (1×3, fluid bc),
#      L₂⁰ (1×5, solid bc). Sign / row-order / column-order
#      transcribed under side-by-side review.
#   2. Compatibility conditions (Eq 21, 24) recursively differentiated
#      to order k.
#   3. ESIM algorithmic recipe (§3.4-3.7): modified-value computation
#      via Π·G·K·M̄⁻¹ (Eq 42) and time-stepping near interfaces
#      (Eq 43-44).
#   4. Numerical example §4.1 (plane fluid-solid interface): published
#      L²-error rates + observed convergence orders.
#
# These quantitative anchors satisfy the repo-wide reproduction-as-
# prerequisite gate (see parent repo
# tests/test_reproduction_prerequisites.py) and ground the Tier 3
# ESIM implementation in Method 2 RSG to a paper-faithful reference.

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",      # for SVD + lstsq
    "sympy>=1.12",      # for symbolic Taylor expansion verification
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
packages = []
