[project]
name = "mallick_frazer_1990"
version = "0.1.0"
description = "Mallick & Frazer (1990) JGR anisotropic R/T reflection-coefficient reproduction"
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mallick_frazer_1990*"]
