[project]
name = "hao_2022"
version = "0.1.0"
description = "Hao et al. (2022) two-tier Kjartansson constant-Q viscoelastic TI — reproduction"
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hao_2022*"]
