[project]
name = "reproduction-virieux-1986"
version = "0.1.0"
description = "Devito reproduction of Virieux (1986) P-SV velocity-stress staggered-grid scheme"
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10"

# Pinned to Devito mainline. uv.lock pins the exact SHA at sync time.
# This reproduction is the foundational 2nd-order claim; the higher-
# order extensions {4, 8, 16} per repo-wide so=16 convention are
# verified within this same harness but the *canonical* paper-faithful
# byte-match is at so=2.
dependencies = [
    "devito>=4.8.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "sympy>=1.13",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This package is a reproduction artifact — no installable Python module.
# uv requires a build backend regardless; declare the package as empty.
bypass-selection = true
packages = []
