[project]
name = "reproduction-levander-1988"
version = "0.1.0"
description = "Devito reproduction of Levander (1988) 4th-order P-SV staggered-grid scheme"
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10"

# Pinned to Devito mainline. uv.lock pins the exact SHA at sync time.
# This reproduction's canonical claim is the 4th-order centred-FD
# stencil at space_order=4 (Levander 1988 Eq 4). Higher orders
# {8, 16} are exercised per the repo-wide so=16 convention but
# flagged in tests as beyond the formal scope of Levander 1988.
dependencies = [
    "devito>=4.8.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "sympy>=1.13",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
packages = []
