[project]
name = "bouchon_1981"
version = "0.1.0"
description = "Bouchon (1981) Discrete Wavenumber Method — semi-analytical 2D acoustic-acoustic reflectivity reference"
authors = [{ name = "Gerard Gorman", email = "gerard@devitocodes.com" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "mallick_frazer_1990",
]

[tool.uv.sources]
mallick_frazer_1990 = { path = "../doi_10.1029_JB095iB06p08513", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bouchon_1981*"]
